--- a/_posts/2024-1-2-NCRE.md
+++ b/_posts/2024-1-2-NCRE.md
@@ -34,8 +34,9 @@ NCRE采取网上报名，报名考务费每科目75元。
 
 北京考生登录全国计算机等级考试报名网站（[https://ncre-bm.neea.cn](https://ncre-bm.neea.cn)），点击“（11）北京市”报名入口进行网上报名。考生若已有账号，可直接登录报名；若没有账号，需通过“ETEST通行证”网站进行注册。考生登录报名网站后，须认真阅读“省通告：北京市NCRE报名须知”等公告，知悉并遵照相关要求，按照网页提示完成信息填写、照片上传和缴费。
 
-![图 0](images/2024-1-2-NCRE/IMG_20240102-114634949.png)  
+![图 0](./_posts/images/2024-1-2-NCRE/IMG_20240102-114634949.png)  
 ![图 0](https://github.com/Halerfermatqing/halerfermatqing.github.io/raw/main/_posts/images/2024-1-2-NCRE/IMG_20240102-114634949.png)  
+![图 1](https://github.com/Halerfermatqing/halerfermatqing.github.io/raw/main/_posts/images/2024-1-2-NCRE/IMG_20240104-000211857IMG_20240104-000211850.png)  
 
 
 ## 四、报名注意事项
